lib/stratiform/res/test/stratiform/tel/pos/schema-minimal-valid.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name minimal-example

document
  field name String
  field age String
