lib/stratiform/res/test/stratiform/tel/neg/e311-schema-flag-with-content.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name flag-test

document
  field foo
    flag unexpected-content
